src/y.output
Grammar

    0 $accept: Program $end

    1 Program: Imports DeclList

    2 Imports: T_import ImportLoc
    3        | T_from ImportLoc T_import ImportLoc

    4 ImportLoc: ImportLoc "." T_Identifier
    5          | T_Identifier

    6 DeclList: DeclList Decl
    7         | Decl

    8 Decl: T_Identifier "=" Function
    9     | T_Identifier "=" Expr

   10 Function: "{" ExprList "}"
   11         | "{" PramList "|" ExprList "}"

   12 PramList: PramList "," T_Identifier
   13         | T_Identifier

   14 ExprList: /* empty */

   15 Expr: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_import (258) 2 3
T_from (259) 3
T_Identifier (260) 4 5 8 9 12 13
"." (261) 4
"=" (262) 8 9
"{" (263) 10 11
"}" (264) 10 11
"|" (265) 11
"," (266) 12


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
Program (13)
    on left: 1, on right: 0
Imports (14)
    on left: 2 3, on right: 1
ImportLoc (15)
    on left: 4 5, on right: 2 3 4
DeclList (16)
    on left: 6 7, on right: 1 6
Decl (17)
    on left: 8 9, on right: 6 7
Function (18)
    on left: 10 11, on right: 8
PramList (19)
    on left: 12 13, on right: 11 12
ExprList (20)
    on left: 14, on right: 10 11
Expr (21)
    on left: 15, on right: 9


state 0

    0 $accept: . Program $end

    T_import  shift, and go to state 1
    T_from    shift, and go to state 2

    Program  go to state 3
    Imports  go to state 4


state 1

    2 Imports: T_import . ImportLoc

    T_Identifier  shift, and go to state 5

    ImportLoc  go to state 6


state 2

    3 Imports: T_from . ImportLoc T_import ImportLoc

    T_Identifier  shift, and go to state 5

    ImportLoc  go to state 7


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 8


state 4

    1 Program: Imports . DeclList

    T_Identifier  shift, and go to state 9

    DeclList  go to state 10
    Decl      go to state 11


state 5

    5 ImportLoc: T_Identifier .

    $default  reduce using rule 5 (ImportLoc)


state 6

    2 Imports: T_import ImportLoc .
    4 ImportLoc: ImportLoc . "." T_Identifier

    "."  shift, and go to state 12

    $default  reduce using rule 2 (Imports)


state 7

    3 Imports: T_from ImportLoc . T_import ImportLoc
    4 ImportLoc: ImportLoc . "." T_Identifier

    T_import  shift, and go to state 13
    "."       shift, and go to state 12


state 8

    0 $accept: Program $end .

    $default  accept


state 9

    8 Decl: T_Identifier . "=" Function
    9     | T_Identifier . "=" Expr

    "="  shift, and go to state 14


state 10

    1 Program: Imports DeclList .
    6 DeclList: DeclList . Decl

    T_Identifier  shift, and go to state 9

    $default  reduce using rule 1 (Program)

    Decl  go to state 15


state 11

    7 DeclList: Decl .

    $default  reduce using rule 7 (DeclList)


state 12

    4 ImportLoc: ImportLoc "." . T_Identifier

    T_Identifier  shift, and go to state 16


state 13

    3 Imports: T_from ImportLoc T_import . ImportLoc

    T_Identifier  shift, and go to state 5

    ImportLoc  go to state 17


state 14

    8 Decl: T_Identifier "=" . Function
    9     | T_Identifier "=" . Expr

    "{"  shift, and go to state 18

    $default  reduce using rule 15 (Expr)

    Function  go to state 19
    Expr      go to state 20


state 15

    6 DeclList: DeclList Decl .

    $default  reduce using rule 6 (DeclList)


state 16

    4 ImportLoc: ImportLoc "." T_Identifier .

    $default  reduce using rule 4 (ImportLoc)


state 17

    3 Imports: T_from ImportLoc T_import ImportLoc .
    4 ImportLoc: ImportLoc . "." T_Identifier

    "."  shift, and go to state 12

    $default  reduce using rule 3 (Imports)


state 18

   10 Function: "{" . ExprList "}"
   11         | "{" . PramList "|" ExprList "}"

    T_Identifier  shift, and go to state 21

    $default  reduce using rule 14 (ExprList)

    PramList  go to state 22
    ExprList  go to state 23


state 19

    8 Decl: T_Identifier "=" Function .

    $default  reduce using rule 8 (Decl)


state 20

    9 Decl: T_Identifier "=" Expr .

    $default  reduce using rule 9 (Decl)


state 21

   13 PramList: T_Identifier .

    $default  reduce using rule 13 (PramList)


state 22

   11 Function: "{" PramList . "|" ExprList "}"
   12 PramList: PramList . "," T_Identifier

    "|"  shift, and go to state 24
    ","  shift, and go to state 25


state 23

   10 Function: "{" ExprList . "}"

    "}"  shift, and go to state 26


state 24

   11 Function: "{" PramList "|" . ExprList "}"

    $default  reduce using rule 14 (ExprList)

    ExprList  go to state 27


state 25

   12 PramList: PramList "," . T_Identifier

    T_Identifier  shift, and go to state 28


state 26

   10 Function: "{" ExprList "}" .

    $default  reduce using rule 10 (Function)


state 27

   11 Function: "{" PramList "|" ExprList . "}"

    "}"  shift, and go to state 29


state 28

   12 PramList: PramList "," T_Identifier .

    $default  reduce using rule 12 (PramList)


state 29

   11 Function: "{" PramList "|" ExprList "}" .

    $default  reduce using rule 11 (Function)
